5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1692_1100.log
== TEST (2019-04-30 19:06:47) 
-- CODE:
nota=int(input("valor do pink money: "))
if (nota>0):
elif (nota==2):
	print("Entrada: ", nota)
	print("Animal: Tartaruga")
elif (nota==5):
	print("Entrada: ", nota)
	print("Animal: Garca")
elif (nota==10):
	print("Entrada: ", nota)
	print("Animal: Arara")
elif (nota==20):
	print("Entrada: ", nota)
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Entrada: ", nota)
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Entrada: ", nota)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- ERROR:
File "XXXX", line 3
    elif (nota==2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:08:05) 
-- CODE:
nota=int(input("valor do pink money: "))
if (nota>0):
elif (nota==2):
	print("Entrada: ", nota)
	print("Animal: Tartaruga")
elif (nota==5):
	print("Entrada: ", nota)
	print("Animal: Garca")
elif (nota==10):
	print("Entrada: ", nota)
	print("Animal: Arara")
elif (nota==20):
	print("Entrada: ", nota)
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Entrada: ", nota)
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Entrada: ", nota)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- ERROR:
File "XXXX", line 3
    elif (nota==2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:09:23) 
-- CODE:
nota=int(input("valor do pink money: "))
if (nota==2):
	print("Entrada: ", nota)
	print("Animal: Tartaruga")
elif (nota==5):
	print("Entrada: ", nota)
	print("Animal: Garca")
elif (nota==10):
	print("Entrada: ", nota)
	print("Animal: Arara")
elif (nota==20):
	print("Entrada: ", nota)
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Entrada: ", nota)
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Entrada: ", nota)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:09:34) 
-- CODE:
nota=int(input("valor do pink money: "))
if (nota==2):
	print("Entrada: ", nota)
	print("Animal: Tartaruga")
elif (nota==5):
	print("Entrada: ", nota)
	print("Animal: Garca")
elif (nota==10):
	print("Entrada: ", nota)
	print("Animal: Arara")
elif (nota==20):
	print("Entrada: ", nota)
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Entrada: ", nota)
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Entrada: ", nota)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.191195
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:09:42) 
-- CODE:
nota=int(input("valor do pink money: "))
if (nota==2):
	print("Entrada: ", nota)
	print("Animal: Tartaruga")
elif (nota==5):
	print("Entrada: ", nota)
	print("Animal: Garca")
elif (nota==10):
	print("Entrada: ", nota)
	print("Animal: Arara")
elif (nota==20):
	print("Entrada: ", nota)
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Entrada: ", nota)
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Entrada: ", nota)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:09:53) 
-- CODE:
nota=int(input("valor do pink money: "))
if (nota==2):
	print("Entrada: ", nota)
	print("Animal: Tartaruga")
elif (nota==5):
	print("Entrada: ", nota)
	print("Animal: Garca")
elif (nota==10):
	print("Entrada: ", nota)
	print("Animal: Arara")
elif (nota==20):
	print("Entrada: ", nota)
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Entrada: ", nota)
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Entrada: ", nota)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.22339
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:09:58) 
-- CODE:
nota=int(input("valor do pink money: "))
if (nota==2):
	print("Entrada: ", nota)
	print("Animal: Tartaruga")
elif (nota==5):
	print("Entrada: ", nota)
	print("Animal: Garca")
elif (nota==10):
	print("Entrada: ", nota)
	print("Animal: Arara")
elif (nota==20):
	print("Entrada: ", nota)
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Entrada: ", nota)
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Entrada: ", nota)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.106929
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:09:58) 
-- CODE:
nota=int(input("valor do pink money: "))
if (nota==2):
	print("Entrada: ", nota)
	print("Animal: Tartaruga")
elif (nota==5):
	print("Entrada: ", nota)
	print("Animal: Garca")
elif (nota==10):
	print("Entrada: ", nota)
	print("Animal: Arara")
elif (nota==20):
	print("Entrada: ", nota)
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Entrada: ", nota)
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Entrada: ", nota)
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:11:45) 
-- CODE:
nota=int(input("valor do pink money: "))
print("Entrada: ", nota)
if (nota==2):
	print("Animal: Tartaruga")
elif (nota==5):
	print("Animal: Garca")
elif (nota==10):
	print("Animal: Arara")
elif (nota==20):
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:11:51) 
-- CODE:
nota=int(input("valor do pink money: "))
print("Entrada: ", nota)
if (nota==2):
	print("Animal: Tartaruga")
elif (nota==5):
	print("Animal: Garca")
elif (nota==10):
	print("Animal: Arara")
elif (nota==20):
	print("Animal: Mico-leao-dourado")
elif (nota==50):
	print("Animal: Onca-pintada")
elif (nota==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.183253
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
